# some_quiz

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  client.cpp  client.h  main.cpp
server/: CMakeLists.txt  data.cpp  data.h  main.cpp  server.cpp  server.h
